# DiaEvo

./: .env.example  .gitignore  CODE_WIKI.md  README.md  diaevo-home.cmd  diaevo-home.ps1  diaevo.cmd  diaevo.ps1  install-diaevo.ps1  pyproject.toml  requirements.txt  skillminer-home.ps1  skillminer.ps1
data/: plugin_metadata.json  recommender_weights.json  sample_traces.jsonl  skill_registry.json
diaevo/: __init__.py  association_rules.py  cli.py  clustering.py  code_evolution.py  deepseek_chat.py  env.py  evaluation.py  evolution.py  generator.py  gepa_adapter.py  ingest.py  knowledge_graph.py  miner.py  mining_snapshot.py  models.py  paths.py  promotion.py  qq_bridge.py  quality.py  recommender.py  script_artifacts.py  sessions.py  skill_adapter.py  skill_context.py  storage.py  tool_layer.py  validation_runner.py  verifier.py
docs/: AUTONOMOUS_EVOLUTION_LOOP.md  DESIGN.md  FINAL_PROJECT_REPORT.md  GEPA_SKILL_EVOLUTION_GUIDE.md  HANDOFF.md  HANDOFF_ADVANCED_SKILL_EVOLUTION.md  HANDOFF_AUTONOMOUS_EVOLUTION_RESEARCH.md  HANDOFF_TOOL_LAYER_PHASE1.md  REFERENCES.md  THIRD_PARTY_LIBRARIES.md  talk_whit_GEPA.md
scripts/: run_chinese_de_ai_frontend_experiment.py  run_garden_skill_migration_evolution_experiment.py  run_garden_web_design_adaptation_test.py  start-searxng.ps1  summarize_garden_evolution_diagnostics.py
skillminer/: __init__.py  cli.py  clustering.py  deepseek_chat.py  env.py  evaluation.py  evolution.py  features.py  generator.py  gepa_adapter.py  ingest.py  miner.py  (+13 more)
skillminer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+124 files in other folders)
