[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diaevo"
version = "0.1.1"
description = "Self-evolving Agent skill mining, recommendation, generation, and verification MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7", "prompt_toolkit>=3.0.43"]

[project.optional-dependencies]
ui = ["rich>=13.7", "prompt_toolkit>=3.0.43"]
test = ["pytest>=8.0"]
qq = ["websockets>=12.0"]
full = [
  "numpy",
  "pandas",
  "scikit-learn",
  "networkx",
  "mlxtend",
  "sentence-transformers",
  "textual",
  "pyyaml",
  "websockets>=12.0",
]

[project.scripts]
diaevo = "diaevo.cli:main"
diaevo-home = "ui.terminal_home:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["diaevo*", "ui*"]
